--- a/index.html
+++ b/index.html
@@ -42,16 +42,24 @@
 <h1 class="donation"> 〽️  لا يوجد لدينا اي موزعين〽️ </h1>
 <br>
 <br>
-<h1 class="donation"> 〽️  اذا منحت احد عضويتك سوف تتلغي دون إنذار 〽️ </h1>
+<h1 class="donation"> 〽️  اذا منحت احد عضويتك سوف تلغي دون إنذار 〽️ </h1>
+<br>
+<br>
+<h1 class="donation">〽️سعر الاشتراك 15$ بايبال〽️</h1>
 <br>
 <br>
 <hr class="ee">
 <br>
 <hr clase="ee">
 <center>
-<table style='filter:shadow'><font color="#FFFF00" size="15">للاشتراك والاستفسار</font></table>
+<table style='filter:shadow'><font color="#FFFF00" size="15">للاشتراك من هنا</font></table>
+<br>
+<a class="bb" href="https://paypal.me/ahmedalifadl"class="btn btn-lg btn-outline">  اشترك الان</a>
+<br>
+<table style='filter:shadow'><font color="#FFFF00" size="15">لارسال وصل الدفع</font></table>
 <br>
 <a class="bb" href="https://t.me/A_H_M_E_D_4"class="btn btn-lg btn-outline"> اتصل بنا</a>
+
 </center>
 <br>
 <hr clase="ee">
