--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <br>
 <a class="bb" href="https://paypal.me/ahmedalifadl"class="btn btn-lg btn-outline">  اشترك الان</a>
 <br>
+<hr class="ee">
+<br>
 <table style='filter:shadow'><font color="#FFFF00" size="15">لارسال وصل الدفع</font></table>
 <br>
 <a class="bb" href="https://t.me/A_H_M_E_D_4"class="btn btn-lg btn-outline"> اتصل بنا</a>
